chore: update release
Signed-off-by: Victor Adossi <vadossi@cosmonic.com>

--- a/.github/workflows/prep-release.yaml
+++ b/.github/workflows/prep-release.yaml
@@ -1,8 +1,7 @@
 name: create-release-pr
+run-name: create-release-pr
 
 on:
-  push:
-    - "feat(ops)=add-release-machinery" # TODO: REMOVE
   workflow_dispatch:
     inputs:
       project:
