--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,4 +1,5 @@
 name: release
+run-name: release
 
 on:
   push:
@@ -12,7 +13,7 @@ on:
   workflow_dispatch:
     inputs:
       project:
-        description: Project to to prep for release (ex. `0.1.0`)
+        description: Project to to prep for release (ex. `webidl2wit`)
         required: true
         default: "webidl2wit"
         type: string
@@ -24,15 +25,6 @@ on:
         description: Version to release (ex. `0.1.0`)
         required: false
         type: string
-
-  push:
-    branches:
-      # Run on all commits to main, because GitHub somehow doesn't support only specifying tag patterns
-      # (filtering must be done at the per-job level with an `if`)
-      - main
-    tags:
-      # Run on released tags (created by automated post-merge release-tagging), to generate the actual release
-      - v[0-9]+\.[0-9]+\.[0-9]+
 
 jobs:
   build-bin:
