--- a/.github/workflows/prep-release.yaml
+++ b/.github/workflows/prep-release.yaml
@@ -93,12 +93,14 @@ jobs:
             MendyBerger
           signoff: true
           body: |
-            This is a release prep branch for `${{ steps.meta.outputs.project }}` release v${{ steps.meta.outputs.next-version }}.
+            This is a release prep branch for `${{ steps.meta.outputs.project }}` release `v${{ steps.meta.outputs.next-version }}`.
 
-            Upon merging, this branch will cause a tag to be placed on the commit in `main`. After the tag has been placed, a build will run that generates artifacts and publishes a release.
-
-            Before this release is ready, please do the following:
-              - [ ] Generate and test artifacts
+            To ensure this release is ready to be merged:
               - [ ] Review the updated CHANGELOG(s)
+              - [ ] Test release artifacts (if necessary)
+
+            After merging this PR, please do the following:
+              - [ ] Run the `tag-release` CI workflow (specifying the commit hash of this PR once fast-forwarded onto `main`)
+              - [ ] Run the `release` CI workflow, which will use the release tag to make a proper release to GitHub and Crates.io
 
             See CHANGELOG for changes made to this release before it goes out.
