--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -73,19 +73,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: taiki-e/install-action@d125c0a83576d3c0c86ac610c708b38d3565af4e # v2.47.15
-        with:
-          fallback: none
-          tool: git-cliff
-
-      - name: Generate current changelog
-        working-directory: crates/${{ needs.meta.outputs.project }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          export TAG=${{ needs.meta.outputs.project }}-${{ needs.meta.outputs.version }}
-          git cliff --repository=../../ --tag=$TAG > CHANGELOG.current
-
       - name: Release crate (dry run)
         if: ${{ startsWith(github.ref, 'refs/heads/prep-release') }} # release prep branch
         working-directory: crates/${{ needs.meta.outputs.project }}
@@ -100,6 +87,30 @@ jobs:
         run: |
           cargo publish --locked --dry-run
 
+  gh-release-lib:
+    if: ${{ inputs.project == 'webidl2wit' }}
+    runs-on: ubuntu-latest
+    needs:
+      - release-crate
+    steps:
+      # Checkout the repository
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          fetch-depth: 0
+
+      - uses: taiki-e/install-action@d125c0a83576d3c0c86ac610c708b38d3565af4e # v2.47.15
+        with:
+          fallback: none
+          tool: git-cliff
+
+      - name: Generate current changelog
+        working-directory: crates/${{ needs.meta.outputs.project }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          export TAG=${{ needs.meta.outputs.project }}-${{ needs.meta.outputs.version }}
+          git cliff --repository=../../ --tag=$TAG > CHANGELOG.current
+
       - name: Create GH release
         if: ${{ inputs.project == 'webidl2wit' }}
         uses: softprops/action-gh-release@c95fe1489396fe8a9eb87c0abf8aa5b2ef267fda # v2.2.1
@@ -108,9 +119,9 @@ jobs:
           draft: ${{ startsWith(github.ref, 'refs/heads/prep-release') }}
           tag_name: ${{ github.ref_name || inputs.version }}
           generate_release_notes: false
-          body_path: CHANGELOG.current
+          body_path: crates/${{ needs.meta.outputs.project }}/CHANGELOG.current
 
-  release-bin:
+  gh-release-build-cli:
     if: ${{ inputs.project == 'webidl2wit-cli' }}
     runs-on: ubuntu-latest
     needs:
@@ -120,6 +131,7 @@ jobs:
         platform:
           - triple: x86_64-unknown-linux-gnu
     steps:
+      # Checkout the repository
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - uses: taiki-e/install-action@d125c0a83576d3c0c86ac610c708b38d3565af4e # v2.47.15
@@ -133,6 +145,31 @@ jobs:
         run: |
           cargo zigbuild --target=${{ matrix.platform.triple }}
 
+      - uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
+        with:
+          path: target/${{ matrix.platform.triple }}/wit-bindgen-cli
+          if-no-files-found: error
+
+  gh-release-cli:
+    if: ${{ inputs.project == 'webidl2wit-cli' }}
+    runs-on: ubuntu-latest
+    needs:
+      - release-crate
+    strategy:
+      matrix:
+        platform:
+          - triple: x86_64-unknown-linux-gnu
+    steps:
+      # Checkout the repository
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          fetch-depth: 0
+
+      - uses: taiki-e/install-action@d125c0a83576d3c0c86ac610c708b38d3565af4e # v2.47.15
+        with:
+          fallback: none
+          tool: git-cliff
+
       - name: Generate current changelog
         working-directory: crates/${{ needs.meta.outputs.project }}
         env:
@@ -141,10 +178,10 @@ jobs:
           export TAG=${{ needs.meta.outputs.project }}-${{ needs.meta.outputs.version }}
           git cliff --repository=../../ --tag=$TAG > CHANGELOG.current
 
-      - uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
+      - uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
+        if: ${{ inputs.project == 'webidl2wit-cli' }}
         with:
-          path: target/${{ matrix.platform.triple }}/wit-bindgen-cli
-          if-no-files-found: error
+          path: artifacts
 
       - name: Create GH release
         if: ${{ inputs.project == 'webidl2wit-cli' }}
@@ -154,6 +191,6 @@ jobs:
           draft: ${{ startsWith(github.ref, 'refs/heads/prep-release') }}
           tag_name: ${{ github.ref_name || inputs.version }}
           generate_release_notes: false
-          body_path: CHANGELOG.current
+          body_path: crates/${{ needs.meta.outputs.project }}/CHANGELOG.current
           files: |
             ./artifacts/*/*
