--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -118,7 +118,7 @@ jobs:
         with:
           prerelease: ${{ startsWith(github.ref, 'refs/heads/prep-release') }}
           draft: ${{ startsWith(github.ref, 'refs/heads/prep-release') }}
-          tag_name: ${{ github.ref_name || inputs.version }}
+          tag_name: ${{ needs.meta.outputs.version }}
           generate_release_notes: false
           body_path: crates/${{ needs.meta.outputs.project }}/CHANGELOG.current
 
@@ -191,7 +191,7 @@ jobs:
         with:
           prerelease: ${{ startsWith(github.ref, 'refs/heads/prep-release') }}
           draft: ${{ startsWith(github.ref, 'refs/heads/prep-release') }}
-          tag_name: ${{ github.ref_name || inputs.version }}
+          tag_name: ${{ needs.meta.outputs.version }}
           generate_release_notes: false
           body_path: crates/${{ needs.meta.outputs.project }}/CHANGELOG.current
           files: |
