--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -113,12 +113,11 @@ jobs:
           git cliff --repository=../../ --tag=$TAG > CHANGELOG.current
 
       - name: Create GH release
-        if: ${{ inputs.project == 'webidl2wit' }}
         uses: softprops/action-gh-release@c95fe1489396fe8a9eb87c0abf8aa5b2ef267fda # v2.2.1
         with:
           prerelease: ${{ startsWith(github.ref, 'refs/heads/prep-release') }}
           draft: ${{ startsWith(github.ref, 'refs/heads/prep-release') }}
-          tag_name: ${{ needs.meta.outputs.version }}
+          tag_name: ${{ needs.meta.outputs.project }}-v${{ needs.meta.outputs.version }}
           generate_release_notes: false
           body_path: crates/${{ needs.meta.outputs.project }}/CHANGELOG.current
 
@@ -181,17 +180,15 @@ jobs:
           git cliff --repository=../../ --tag=$TAG > CHANGELOG.current
 
       - uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
-        if: ${{ inputs.project == 'webidl2wit-cli' }}
         with:
           path: artifacts
 
       - name: Create GH release
-        if: ${{ inputs.project == 'webidl2wit-cli' }}
         uses: softprops/action-gh-release@c95fe1489396fe8a9eb87c0abf8aa5b2ef267fda # v2.2.1
         with:
           prerelease: ${{ startsWith(github.ref, 'refs/heads/prep-release') }}
           draft: ${{ startsWith(github.ref, 'refs/heads/prep-release') }}
-          tag_name: ${{ needs.meta.outputs.version }}
+          tag_name: ${{ needs.meta.outputs.project }}-v${{ needs.meta.outputs.version }}
           generate_release_notes: false
           body_path: crates/${{ needs.meta.outputs.project }}/CHANGELOG.current
           files: |
